lustre/osd-ldiskfs/osd_handler.c
@@ -2953,7 +2953,8 @@ static int osd_index_try(const struct lu_env *env, struct dt_object *dt,
         }
         LINVRNT(osd_invariant(obj));
 
-	if (is_quota_glb_feat(feat))
+	if (result == 0 && is_quota_glb_feat(feat) &&
+	    fid_seq(lu_object_fid(&dt->do_lu)) == FID_SEQ_QUOTA_GLB)
 		result = osd_quota_migration(env, dt, feat);
 
         return result;
